<resources>
    <string name="app_name">TrainingRecord</string>
    <string name="TrainingRecord">トレーニング記録</string>
    <string name="WeightRecord">ウエイト管理</string>
    <string name="Chest">大胸筋</string>
    <string name="Shoulder">腕・肩</string>
    <string name="Back">背中</string>
    <string name="Run">有酸素</string>
    <string name="Legs">下半身</string>
    <string name="Off">オフ</string>
    <string name="register">登録</string>
    <string name="edit_weight">体重</string>
    <string name="edit_fat">体脂肪</string>
    <string name="date_hint_text">日付を選択してください</string>
    <string name="back_home">ホームへ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>